make java8 compatible again